# mcp_assignment

./: README.md  agent.py  agent_old.py  database_setup.py  main.py  mcp_connection_test.py  notes.md  pyproject.toml  requirements.txt  server.py  test.py
agents/: router_agent.py
