[project]
name = "mcp-on-cloudrun"
version = "0.1.0"
description = "Deploying an example of MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp==2.12.4",
    "google-adk==1.14.0",
    "langchain>=0.3.27",
    "langchain-community==0.3.27",
    "langchain-core>=0.3.80",
    "langchain-text-splitters>=0.3.11",
    "python-dotenv>=1.2.1",
]

[tool.setuptools]
py-modules = ["database_setup", "main", "server", "agent"]
